devops/ingress-live-environment/staging-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: questcode
  namespace: staging
spec:
  rules:
  - host: staging.questcode.org
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: staging-frontend
            port:
              number: 80
