devops/ingress-live-environment/traefik-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - name: web
    port: 80
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
  - host: "traefik-ui.minikube"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: traefik-web-ui
            port:
              name: web
